# raspi-lcd-driver

./: README.md  lcd.c  make.sh
src/: CMakeLists.txt  cross-compile.cmake  lcd.c  lcd.h  test.c
src/lcd-controllerd/: CMakeLists.txt  lcd-controllerd.c  lcd-controllerd.h
src/lcd-controllerd-cli/: CMakeLists.txt  lcd-controllerd-cli.c
src/liblcd/: CMakeLists.txt  font.h  lcd.c  lcd.h
src/test/: CMakeLists.txt  test.c
